Visual C++ 2015 proj file

--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,17 @@
 *.exe
 *.out
 *.app
+
+# Visual Studio temp/user files
+*.user
+*.suo
+*.sdf
+*.opensdf
+*.ncb
+
+# Build output directories
+Release
+Debug
+MinSizeRel
+RelWithDebInfo
+ipch
