project names were changed

--- a/console_stub/vs2015.vcxproj
+++ b/console_stub/vs2015.vcxproj
@@ -20,7 +20,7 @@
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{6FB22B5A-F146-47DB-BB20-CC04A2FE1AFD}</ProjectGuid>
-    <RootNamespace>stub</RootNamespace>
+    <RootNamespace>test</RootNamespace>
     <WindowsTargetPlatformVersion>8.1</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
