--- a/tuple/for-each/vs2015.vcxproj
+++ b/tuple/for-each/vs2015.vcxproj
@@ -121,6 +121,9 @@
   <ItemGroup>
     <ClCompile Include="main.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="tuple_for_each.h" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
