--- a/tuple/unpacking_tuples/vs2017.vcxproj
+++ b/tuple/unpacking_tuples/vs2017.vcxproj
@@ -123,6 +123,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="main2.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="tuple_utils.h" />
